--- a/indexRk2.html
+++ b/indexRk2.html
@@ -11,6 +11,24 @@
         <link rel="stylesheet" href="cssRK2/style.css">
     </head>
     <body>
-        
+        <header>
+            <button>Menu</button>
+            <a href="">login</a>
+            <a href="">SIGN UP</a>
+        </header>
+        <main>
+            <section>
+                <p>EVERYTHING YOU NEED!</p>
+                <img src="" alt="">
+                <p>Body measurement tracking</p>
+                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, 
+                sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi</p>
+                <img src="" alt="">
+                <p>In home trial of clothes and closet</p>
+                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing 
+                elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi</p>
+                <img src="" alt="">
+            </section>
+        </main>
     </body>
 </html>
