--- a/indexRk2.html
+++ b/indexRk2.html
@@ -11,23 +11,27 @@
         <link rel="stylesheet" href="cssRK2/style.css">
     </head>
     <body>
-        <header class="fonB hir">
-            <button><span class="hedT1">menu</span></button>
+        <header class="fonB hir hederrazm">
+            <button class="fonB"><span class="hedT1">menu</span></button>
             <a href=""><span class="hedT1">login</span></a>
-            <a href=""><span class="hedT2">SIGN UP</span></a>
+            <a href="" class="parent_hed_Z podCherk"><span class="hedT2">SIGN UP</span></a>
         </header>
         <main>
-            <section class="fonB hir">
-                <p class="zag">EVERYTHING YOU NEED!</p>
-                <img src="imgRK2/Group 49.svg" alt="расширение">
-                <p class="main_t_Z">Body measurement tracking</p>
-                <p class="main_t_O">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, 
-                sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi</p>
-                <img src="imgRK2/Group 50.svg" alt="шкаф">
-                <p class="main_t_Z">In home trial of clothes and closet</p>
-                <p class="main_t_O">Lorem ipsum dolor sit amet, consectetuer adipiscing 
-                elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi</p>
-                <img src="imgRK2/Group 46.png" alt="листовка">
+            <section class="fonB hir List1">
+                <h1 class="zag">EVERYTHING YOU NEED!</h1>
+                <div>
+                    <img src="imgRK2/Group 49.svg" alt="расширение">
+                    <p class="main_t_Z">Body measurement tracking</p>
+                    <p class="main_t_O">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, 
+                    sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi</p>
+                </div>
+                <div>
+                    <img src="imgRK2/Group 50.svg" alt="шкаф">
+                    <p class="main_t_Z">In home trial of clothes and closet</p>
+                    <p class="main_t_O">Lorem ipsum dolor sit amet, consectetuer adipiscing 
+                    elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi</p>
+                </div>
+                <img src="imgRK2/Group 46.png" alt="листовка" class="pickB">
             </section>
         </main>
     </body>
