--- a/indexRk2.html
+++ b/indexRk2.html
@@ -19,16 +19,16 @@
         <main>
             <section class="fonB hir List1">
                 <h1 class="zag">EVERYTHING YOU NEED!</h1>
-                <div>
-                    <img src="imgRK2/Group 49.svg" alt="расширение">
-                    <p class="main_t_Z">Body measurement tracking</p>
-                    <p class="main_t_O">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, 
+                <div class="cont">
+                    <img src="imgRK2/Group 49.svg" alt="расширение" class="pict">
+                    <p class="main_t_Z text">Body measurement tracking</p>
+                    <p class="main_t_O text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, 
                     sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi</p>
                 </div>
-                <div>
-                    <img src="imgRK2/Group 50.svg" alt="шкаф">
-                    <p class="main_t_Z">In home trial of clothes and closet</p>
-                    <p class="main_t_O">Lorem ipsum dolor sit amet, consectetuer adipiscing 
+                <div class="cont">
+                    <img src="imgRK2/Group 50.svg" alt="шкаф" class="pict">
+                    <p class="main_t_Z text">In home trial of clothes and closet</p>
+                    <p class="main_t_O text">Lorem ipsum dolor sit amet, consectetuer adipiscing 
                     elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi</p>
                 </div>
                 <img src="imgRK2/Group 46.png" alt="листовка" class="pickB">
